--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,4 +21,6 @@
 
 <!--<div>{{mySelectedValue}}</div>-->
 
-<button style="width: 100%; height: 500px;" id="btn">My button</button>
+<!--<button style="width: 100%; height: 500px;" id="btn">My button</button>-->
+
+<router-outlet></router-outlet>
