--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,4 +23,17 @@
 
 <!--<button style="width: 100%; height: 500px;" id="btn">My button</button>-->
 
+<header style="border: 1px solid black">
+  <a [routerLink]="['/gallery', myId]"
+     routerLinkActive="my-class"
+     [routerLinkActiveOptions]="{ exact: true }"
+     [queryParams]="{ key: 'value', key2: 'value2' }">
+    Link
+  </a>
+
+  <button (click)="navigate()">Navigate button</button>
+</header>
+
 <router-outlet></router-outlet>
+
+<footer>my footer</footer>
